# sum-platform

./: .codex-auth-test.txt  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  PR_181_REVIEW_TRACKER.md  README.md  THEME-033_followup.md  THEME-038_followup.md  THEME-039_followup.md  THEME-041_followup.md  THEME-048_followup.md  check_links.py  coverage.json  docker-compose.yml  pyproject.toml  test-pr-manager-v0.2.3.md  test-pr-manager-v0.2.4.md  test_output.txt
cli/: pyproject.toml
cli/scripts/: sync_boilerplate.py
cli/sum/: __init__.py  cli.py  config.py  exceptions.py
cli/sum/commands/: __init__.py  check.py  init.py  run.py
cli/sum/setup/: __init__.py  auth.py  database.py  deps.py  orchestrator.py  scaffold.py  seed.py  venv.py
cli/sum/utils/: __init__.py  django.py  environment.py  output.py  prompts.py  validation.py
cli/sum_cli/: __init__.py  __main__.py  cli.py  themes_registry.py  util.py
cli/sum_cli/boilerplate/: .env.example  README.md  pytest.ini  requirements.txt
cli/sum_cli/boilerplate/project_name/: __init__.py  urls.py  wsgi.py
cli/sum_cli/boilerplate/tests/: test_health.py
cli/sum_cli/commands/: check.py  init.py  themes.py
cli/tests/: conftest.py  test_auth.py  test_check.py  test_cli_init_and_check.py  test_cli_safety.py  test_config.py  test_database.py  test_deps.py  test_django.py  test_environment.py  test_exceptions.py  test_init.py  test_orchestrator.py  test_orchestrator_seed_site.py  test_output.py  test_prompts.py  test_run.py  test_scaffold.py  test_seed.py  test_theme_init.py  test_themes_command.py  test_validation.py  test_venv.py
core/: pyproject.toml
core/sum_core/: __init__.py  apps.py  celery.py  models.py
core/sum_core/analytics/: __init__.py  apps.py  dashboard.py  wagtail_hooks.py
core/sum_core/analytics/templatetags/: analytics_tags.py
core/sum_core/blocks/: __init__.py  base.py  content.py  forms.py  gallery.py  hero.py  links.py  process_faq.py  services.py  testimonials.py  trust.py
core/sum_core/branding/: __init__.py  forms.py  models.py  panels.py  theme_presets.py
core/sum_core/branding/templatetags/: __init__.py  branding_tags.py
core/sum_core/forms/: __init__.py  admin.py  apps.py  cache.py  dynamic.py  fields.py  models.py  services.py  tasks.py  urls.py  views.py  wagtail_hooks.py
core/sum_core/forms/migrations/: 0001_initial.py  0002_formdefinition.py  0003_alter_formdefinition_fields.py  0004_formdefinition_webhook_controls.py
core/sum_core/integrations/: __init__.py  zapier.py
core/sum_core/leads/: __init__.py  admin.py  apps.py  attribution.py  models.py  services.py  tasks.py  wagtail_admin.py  wagtail_hooks.py
core/sum_core/leads/migrations/: 0001_initial.py  0002_leadsourcerule_lead_landing_page_url_and_more.py  0003_alter_lead_options.py  0004_lead_integration_status_fields.py  0005_lead_zapier_status_fields.py  0006_lead_dynamic_form_status_fields.py
core/sum_core/management/: __init__.py
core/sum_core/management/commands/: __init__.py  seed_homepage.py
core/sum_core/migrations/: 0001_initial.py  0002_sitesettings_og_default_image.py  0003_sitesettings_ga_measurement_id_and_more.py  0004_add_robots_txt_field.py  0005_sitesettings_zapier_fields.py  0006_sitesettings_notification_from_email_and_more.py  0007_sitesettings_established_year.py  0008_sitesettings_cookie_banner_enabled_and_more.py
core/sum_core/navigation/: __init__.py  apps.py  blocks.py  cache.py  models.py  services.py
core/sum_core/navigation/migrations/: 0001_initial.py  0002_alter_footernavigation_social_facebook_and_more.py  __init__.py
core/sum_core/navigation/templatetags/: __init__.py  navigation_tags.py
core/sum_core/ops/: health.py  logging.py  middleware.py  request_utils.py  sentry.py  urls.py  views.py
core/sum_core/pages/: __init__.py  apps.py  blog.py  cache.py  legal.py  mixins.py  models.py  services.py  standard.py  wagtail_admin.py  wagtail_hooks.py
core/sum_core/pages/migrations/: 0001_initial.py  0002_standardpage_seo_and_og_fields.py  0003_alter_standardpage_body.py  0004_serviceindexpage_servicepage.py  0005_serviceindexpage_seo_nofollow_and_more.py  0006_streamfield_portfolioitem_metadata.py  0007_alter_serviceindexpage_intro_alter_servicepage_body_and_more.py  0008_alter_serviceindexpage_intro_alter_servicepage_body_and_more.py  0009_alter_serviceindexpage_intro_alter_servicepage_body_and_more.py  0010_alter_serviceindexpage_intro_alter_servicepage_body_and_more.py  0010_category.py  0011_alter_serviceindexpage_intro_alter_servicepage_body_and_more.py  0011_blog_pages.py  0012_alter_blogpostpage_published_date.py  0013_blogindexpage_fields.py  0013_legalpage.py  0014_merge_0013_blogindexpage_fields_0013_legalpage.py
core/sum_core/search/: __init__.py  urls.py  views.py
core/sum_core/seo/: __init__.py  robots.py  schema.py  sitemap.py  urls.py
core/sum_core/seo/templatetags/: seo_tags.py
core/sum_core/templates/sum_core/: base.html  blog_index_page.html  blog_post_page.html  home_page.html  service_index_page.html  service_page.html  standard_page.html
core/sum_core/templates/theme/: base.html  (+5 more)
core/sum_core/templatetags/: __init__.py  branding_tags.py  form_tags.py  navigation_tags.py
core/sum_core/test_project/: __init__.py  manage.py
core/sum_core/themes/: __init__.py
core/sum_core/utils/: __init__.py  contact.py
(+1193 files in other folders)
