[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sum-core"
version = "0.1.0"
description = "Shared core package for SUM client websites"
requires-python = ">=3.12"
dependencies = [
  "Django>=5.2,<5.3",
  "wagtail>=7.0,<7.1",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "mypy",
  "ruff",
  "black",
  "isort",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sum_core*"]

[tool.setuptools.package-data]
sum_core = [
  "templates/**/*.html",
  "static/**/*",
]
